# changelog

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  LICENSE  Taskfile.yml  bin-upload.config.yaml  biome.json  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  pyproject.toml
.changelog/: 1711753688.md  1711753781.md  1711753887.md  1711754248.md  1711754320.md  1711754530.md  1711755185.md  1711755252.md  1711756740.md  1711757760.md  1711762309.md  1727616244.md  1741068213.md  1741105410.md  1741122206.md  1741157165.md  changelogTemplate.hbs  config.json  config.yaml
.changelog/next/: 1772222917183.yaml  1772257103783.yaml  1772285071799.yaml  1772374135289.yaml  1772374899199.yaml
.changelog/releases/: 1.0.0.yaml  1.0.1.yaml  1.0.2.yaml  1.1.0.yaml  1.1.1.yaml
.changelog/templates/: footer.md
.github/workflows/: pr.yml  release.yml
buildscripts/postbuild/: postbuild.go
docs/: README.md  _sidebar.md  commands.md  configuration.md  git-flow.md  how-it-works.md  index.html  llms.txt  migrating.md
docs/tutorials/: js.md  python.md
internal/add/: changelogentry.go  commands.go  fileTemplate.hbs  forms.go  messages.go  model.go  state.go
internal/apply/: apply.go  changedescription.go  changelog.go  commands.go  forms.go  messages.go  model.go  state.go  summaryTemplate.hbs  versionfilematch.go  versionfilematchescontainer.go
internal/cliflags/: cliflags.go
internal/cmd/: root.go
internal/common/: messages.go
internal/config/: config.go
internal/gitmanage/: gitmanage.go
scripts/: build.ts  install.ps1  install.sh
src/: index.ts
(+43 files in other folders)
