[project]
name = "changelog-app"
classifiers = ["Private :: Do Not Upload"]
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["python/*"]

[tool.uv.sources]
changesets-win32-x64 = { workspace = true }
changesets-win32-arm64 = { workspace = true }
changesets-darwin-arm64 = { workspace = true }
changesets-darwin-x64 = { workspace = true }
changesets-linux-arm64 = { workspace = true }
changesets-linux-x64 = { workspace = true }
